--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,9 +41,27 @@ url = "https://download.pytorch.org/whl/cu124"
 explicit = true
 
 [dependency-groups]
+dev = [
+    "coverage>=7.8.0",
+    "jupyterlab>=4.4.0",
+    "marimo>=0.12.6",
+    "pytest>=8.3.5",
+]
 lint = [
     "black>=25.1.0",
     "isort>=6.0.1",
     "mypy>=1.15.0",
+    "nbqa>=1.9.1",
     "ruff>=0.11.4",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "-ra -q"
+
+
+[tool.coverage.run]
+source = ["information_flow_routes"]
+
+[tool.coverage.report]
+show_missing = true
